@@ -2,16 +2,14 @@
 Hash: SHA512
 
 DIST pdbpp-0.7.2.tar.gz 17698 RMD160 e51ac74a0330043fecd72fc60f8e66966ab5d069 SHA1 55076772068fc5a29867e6ef517aa3fcf38316c3 SHA256 cbe1f64afa5ca324e270f91cd9abb576ddd64520dd2b47376010ea9962af6be7
-DIST pdbpp-0.7.tar.gz 17436 RMD160 329a9078e742bf4b52df1d10767266796647de50 SHA1 0987b26df955b227c471e8033cd10ed65eba3d34 SHA256 36090be1690ad93c6187eaab6a93473495aa642f8d84abd41a2192a4d40a9f6d
-EBUILD pdbpp-0.7.2.ebuild 533 RMD160 c03382a252cfbd96c9e2d0f8b505581e1fccd6ed SHA1 c6483eb7487e2b3e37d713b64e9363c9e65e06ac SHA256 2a534025089d74b897143fb5fc30245820a7cc06269d9ad70d3325c1cca3d8da
-EBUILD pdbpp-0.7.ebuild 532 RMD160 716e342897b03e30ab6f8ef2870063b0cf743e45 SHA1 fb7b6728d41a7b0ed28f993c9abcebe85d8c82d2 SHA256 26ca7e8d6003d60dd04764d60991639fdb24204cac557a6111f1070ee97b8a86
-MISC ChangeLog 1116 RMD160 6dab9e066646b29b5bb4d6e8e60df26b9318f225 SHA1 758cd8a63af11d3b2eb746f2f701b860ceb64aad SHA256 eda304f0bba233ccff728ec51baaf71d9e4a06cf6d552f5882a9ec50be2ca93c
+EBUILD pdbpp-0.7.2.ebuild 532 RMD160 716e342897b03e30ab6f8ef2870063b0cf743e45 SHA1 fb7b6728d41a7b0ed28f993c9abcebe85d8c82d2 SHA256 26ca7e8d6003d60dd04764d60991639fdb24204cac557a6111f1070ee97b8a86
+MISC ChangeLog 1220 RMD160 3f7135a020870cb4a660aaf299a38b7228cc2a35 SHA1 3bc366c2550118baaff09dff98ec3d30daee9ae7 SHA256 97580641dda2594be28198873ac179012e9f4893e75c9657197bdb52eee6791a
 MISC metadata.xml 691 RMD160 8bbf5e7b7dad2b26974de65abd63a1f536640c1f SHA1 87c62f0fe49afeaafbeb8597b04651247e7fc1cf SHA256 b08c4c8a86192103050db7425ba65a095e1654c663cd7dcff68789a4a897ffca
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk5OsM0ACgkQzJrj3cAXR0nchACfTj+tobpbt9wq7RGOUr51YgNh
-V6IAniMVHTeBuToUMcEM30aLLKHrdQMl
-=AnBn
+iEYEAREKAAYFAk5OuXoACgkQzJrj3cAXR0nTtwCeMTcn3cd9CGg/iNHpdw5i4AZ4
+YbwAoKxJcdopSiuBOJ0hpFxo7tNE1pa5
+=5P4k
 -----END PGP SIGNATURE-----
