@@ -1,22 +1,0 @@
-dev-python/setuptools test? ( dev-python/py ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-dev-python/fancycompleter dev-python/wmctrl dev-python/pygments >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-mirror://pypi/p/pdbpp/pdbpp-0.7.tar.gz
-
-http://pypi.python.org/pypi/pdbpp/
-BSD
-An enhanced drop-in replacement for pdb
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-test
-
-
-
-3
-
-compile install postinst postrm prepare
-
-
-
-
-
