@@ -6,7 +6,7 @@ mirror://pypi/p/pdbpp/pdbpp-0.7.2.tar.gz
 http://pypi.python.org/pypi/pdbpp/
 BSD
 An enhanced drop-in replacement for pdb
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 test
 
