@@ -1,4 +1,3 @@
-* dev-python/pdbpp-0.7.2                      x86 SCHEDULED: <2011-08-19 Fri>
 * media-gfx/sphinxcontrib-blockdiag-0.9.0     x86 SCHEDULED: <2011-08-19 Fri>
 * dev-python/sure-0.6.1                       x86 SCHEDULED: <2011-08-19 Fri>
 * dev-python/genzshcomp-0.2.2                 x86 SCHEDULED: <2011-08-19 Fri>
